# lxappearance-obconf

./: .gitignore  AUTHORS  CHANGELOG  Makefile.am  README  README.transifex  configure.ac  nl.po
debian/: changelog  control  copyright  docs  rules  watch
po/: LINGUAS  POTFILES.in  ar.po  be.po  bg.po  bn_IN.po  ca.po  cs.po  da.po  de.po  el.po  en@boldquot.po  en@quot.po  en_GB.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  lg.po  lt.po  lxappearance-obconf.pot  nb.po  nl.po  no.po  pa.po  pl.po  (+18 more)
src/: appearance.c  archive.c  main.c  main.h  obconf.glade  preview.c  preview.h  preview_update.c  preview_update.h  theme.c  tree.c  tree.h
